Fix scrollbar issues/double scrollbar issues

--- a/app/assets/stylesheets/framework/gitlab-theme.scss
+++ b/app/assets/stylesheets/framework/gitlab-theme.scss
@@ -118,3 +118,11 @@ body {
     @include gitlab-theme(#9988CC, $theme-violet, #443366, #332255);
   }
 }
+
+
+::-webkit-scrollbar{width: 3px;}
+
+::-webkit-scrollbar-thumb{background-color:$theme-charcoal; border-radius: 0;}
+::-webkit-scrollbar-thumb:hover{background-color:$theme-charcoal;}
+
+::-webkit-scrollbar-track{background-color:#FFF;}
